--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active text-light" href="#">Galeria de imagenes</a>
+                    <a class="nav-link active text-light" href="autonomo4-galeriaimagenes/index.html">Galeria de imagenes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active text-light" href="#">¿Quiénes somos?</a>
+                    <a class="nav-link active text-light" href="autonomo4-quienes-somos/index.html">¿Quiénes somos?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active text-light" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
+                    <a class="nav-link active text-light" href="proyectodisenogit-main/index.html" tabindex="-1" aria-disabled="true">Contacto</a>
                 </li>
             </ul>
         </div>
